--- a/README
+++ b/README
@@ -11,8 +11,21 @@ Jeremy Paris 	(c)2012
 REQUIRED:
 -jQuery v1.7+
 
+
+
+
 Notes:
+
 -HTML code for each element should define the "placeholder" attribute
 -If the "placeholder" attribute is altered by other javascript, you will need to reinstantiate this plugin on the element
 -Utilizes jQuery's on() and off() functions to handle event listeners
 -Pass in a default color to have your placeholder text show up in (default: gray)
+
+
+Initialization Examples:
+
+$("input[placeholder]").placeholderfb();
+$("textarea[placeholder]").placeholderfb();
+$("input[placeholder]").placeholderfb({
+	color: '#ff0000'
+});
